# Ecloria

./: .gitignore  README.md  pyproject.toml
ecloria/: db.sqlite3  manage.py
ecloria/account/: forms.py  views.py
ecloria/accounts/: forms.py  models.py  urls.py  views.py
ecloria/accounts/migrations/: 0001_initial.py
ecloria/catalog/: models.py  urls.py  views.py
ecloria/catalog/migrations/: 0001_initial.py  0002_alter_category_description_alter_category_thumbnail_and_more.py  0003_product_thumbnail.py  0004_product_slug.py  0005_product_stock.py  0006_alter_product_slug.py
ecloria/ecloria/: asgi.py  settings.py  urls.py  wsgi.py
ecloria/home/: views.py
ecloria/media/catalogues/: bracelet n 1.avif  bracelet n 2.avif
ecloria/orders/: admin.py  context_processors.py  models.py  urls.py  views.py
ecloria/orders/migrations/: 0001_initial.py  0002_cart.py
ecloria/orders/templatetags/: cart_extras.py
ecloria/static/css/: all.min.css  base.css  icones.css
ecloria/static/css/category/: product_detail.css
ecloria/static/css/home/: home.css
ecloria/static/css/login/: login.css  signup.css
ecloria/static/css/produit/: produit.css
ecloria/static/js/: script.js
ecloria/templates/: base.html  views.py
ecloria/templates/accounts/: login.html  signup.html
ecloria/templates/admin/: base_site.html
ecloria/templates/catalog/: category.html  list_cat.html  product_detail.html  product_list.html
ecloria/templates/home/: home.html
ecloria/templates/orders/: checkout_cancel.html  checkout_success.html  orders_summary.html
ecloria/users/: models.py
(+2 files in other folders)
