[project]
name = "ecloria"
version = "0.1.0"
description = ""
authors = [
    {name = "github.com/nabil-ghazali",email = "nabil.dev.ghaz@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.0,<6.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
